--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "tbd",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
-    "build": "NODE_ENV = production webpack",
-    "dev": "NODE_ENV = development webpack-serve"
+    "build": "NODE_ENV=production webpack",
+    "dev": "NODE_ENV=development webpack serve & nodemon server/server.js"
   },
   "author": "Dennis Corsi",
   "license": "ISC",
