--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.12.3",
+    "mongoose": "^8.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
