--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "solo-project",
   "version": "1.0.0",
   "description": "tbd",
-  "main": "index.js",
   "scripts": {
     "start": "nodemon server/server.js",
     "build": "NODE_ENV=production webpack",
@@ -11,10 +10,15 @@
   "author": "Dennis Corsi",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.17",
     "express": "^4.12.3",
     "mongoose": "^8.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
@@ -29,6 +33,7 @@
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "copy-webpack-plugin": "^9.0.1"
   }
 }
