--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.14.17",
     "express": "^4.12.3",
     "mongoose": "^8.0.0",
+    "openai": "^4.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -25,6 +26,7 @@
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "nodemon": "^2.0.22",
@@ -33,7 +35,6 @@
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "copy-webpack-plugin": "^9.0.1"
+    "webpack-dev-server": "^4.15.1"
   }
 }
