--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "solo-project",
-  "version": "1.0.0",
-  "description": "tbd",
+  "name": "bookshelf",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "nodemon server/server.js",
-    "build": "NODE_ENV=production webpack",
-    "dev": "NODE_ENV=development webpack serve & nodemon server/server.js"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
-  "author": "Dennis Corsi",
-  "license": "ISC",
   "dependencies": {
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3",
+    "sort-by": "^1.2.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
@@ -17,24 +23,16 @@
     "@mui/material": "^5.14.17",
     "express": "^4.12.3",
     "mongoose": "^8.0.0",
-    "openai": "^4.16.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "openai": "^4.16.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.2",
-    "@babel/preset-env": "^7.23.2",
-    "@babel/preset-react": "^7.22.15",
-    "babel-loader": "^9.1.3",
-    "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^6.8.1",
-    "html-webpack-plugin": "^5.5.3",
-    "nodemon": "^2.0.22",
-    "sass": "^1.69.5",
-    "sass-loader": "^13.3.2",
-    "style-loader": "^3.3.3",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "vite": "^5.0.8"
   }
 }
