--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^8.0.0",
     "openai": "^4.16.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
