--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.1",
     "express": "^4.12.3",
     "mongoose": "^8.0.0",
     "openai": "^4.16.1",
